--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ src="https://scontent.fbkk33-1.fna.fbcdn.net/v/t51.75761-15/470041228_1797316276
 <div class="project-card slide-up delay3">
   <img src="Water.jpg" alt="Project 4">
   <h3>Weather spring</h3>
-  <p>Weather Spring App คือแอปพลิเคชันแสดงสภาพอากาศแบบเรียลไทม์ พัฒนาด้วยภาษา Java โดยใช้ Spring Boot สำหรับฝั่ง Backend และ HTML, CSS สำหรับ Frontend โดยผู้ใช้งานสามารถค้นหาชื่อเมืองเพื่อดูข้อมูลสภาพอากาศ เช่น อุณหภูมิ ความชื้น และสภาพท้องฟ้าปัจจุบันผ่านหน้าจอเว็บที่ใช้งานง่าย</p>
+  <p>โปรเจ็คกลุ่ม Weather Spring App คือแอปพลิเคชันแสดงสภาพอากาศแบบเรียลไทม์ พัฒนาด้วยภาษา Java โดยใช้ Spring Boot สำหรับฝั่ง Backend และ HTML, CSS สำหรับ Frontend โดยผู้ใช้งานสามารถค้นหาชื่อเมืองเพื่อดูข้อมูลสภาพอากาศ เช่น อุณหภูมิ ความชื้น และสภาพท้องฟ้าปัจจุบันผ่านหน้าจอเว็บที่ใช้งานง่าย</p>
 </div>
 
 <div class="project-card slide-up delay4">
@@ -257,6 +257,11 @@ src="https://scontent.fbkk33-1.fna.fbcdn.net/v/t51.75761-15/470041228_1797316276
   <p>ระบบนี้ถูกพัฒนาขึ้นเพื่ออำนวยความสะดวกให้กับนักศึกษา บุคลากร และ นศ ที่สนใจในการเข้าร่วมงานสัมมนา BUSEM โดยผู้ใช้งานสามารถลงทะเบียนผ่านเว็บไซต์ได้ทันที พร้อมระบบจัดการข้อมูลผู้เข้าร่วม และส่งอีเมลยืนยันการสมัครอัตโนมัติให้กับผู้ใช้ซึ่งโปรเจ็คนี้อยู่ระหว่างดำเนินการ</p>
 </div>
 
+<div class="project-card slide-up delay5">
+  <img src="web.png" alt="Project 7">
+  <h3> Web Akarapat Garden</h3>
+  <p>เว็บไซส์ร้านขายมะเขือเทศของสวน อัคราพัทธ์ จัดทำขึ้นเพื่อประชาสัมพันธ์ให้ผู้บริโภคสามารถดูข้อมูลสายพันธุ์ ราคา โปรโมชั่น ในด้านเทคโนโลยี พัฒนาโดยใช้ HTML สำหรับโครงสร้างเนื้อหา, CSS สำหรับการออกแบบและตกแต่งหน้าเว็บ, และ JavaScript </p>
+</div>
     </div>
   </div>
 </section>
