--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ src="https://scontent.fbkk33-1.fna.fbcdn.net/v/t51.75761-15/470041228_1797316276
 <div class="project-card slide-up delay5">
   <img src="web.png" alt="Project 7">
   <h3> Web Akarapat Garden</h3>
-  <p>เว็บไซส์ร้านขายมะเขือเทศของสวน อัคราพัทธ์ จัดทำขึ้นเพื่อประชาสัมพันธ์ให้ผู้บริโภคสามารถดูข้อมูลสายพันธุ์ ราคา โปรโมชั่น ในด้านเทคโนโลยี พัฒนาโดยใช้ HTML สำหรับโครงสร้างเนื้อหา, CSS สำหรับการออกแบบและตกแต่งหน้าเว็บ, และ JavaScript </p>
+  <p>เว็บไซส์ร้านขายมะเขือเทศของสวน อัคราพัทธ์ จัดทำขึ้นเพื่อประชาสัมพันธ์ให้ผู้บริโภคสามารถดูข้อมูลสายพันธุ์ ราคา โปรโมชั่น ในด้านเทคโนโลยี พัฒนาโดยใช้ HTML สำหรับโครงสร้างเนื้อหา, CSS สำหรับการออกแบบและตกแต่งหน้าเว็บ, และ JavaScript เว็บไซส์นี้อยู่ระหว่างดพเนินการ</p>
 </div>
     </div>
   </div>
