--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ src="https://scontent.fbkk33-1.fna.fbcdn.net/v/t51.75761-15/470041228_1797316276
 <div class="project-card slide-up delay4">
   <img src="cook.jpeg" alt="Project 5">
   <h3>โปรเจ็ค Mobile app แอปเกี่ยวกับการสอนทำอาหาร </h3>
-  <p>แอปพลิเคชันบนมือถือที่ออกแบบมาเพื่อให้ผู้ใช้สามารถเรียนรู้วิธีทำอาหารได้ง่ายผ่านแอป, ขั้นตอนแบบ step-by-step, รูปภาพ และคำอธิบาย โดยจุดเด่นของแอปนี้คือ "ใครก็สามารถลงคลิปสอนทำอาหารได้" ทำให้เกิดคอมมูนิตี้ของคนรักการทำอาหาร ทั้งมืออาชีพและมือสมัครเล่น</p>
+  <p>โปรเจ็คกลุ่ม แอปพลิเคชันบนมือถือที่ออกแบบมาเพื่อให้ผู้ใช้สามารถเรียนรู้วิธีทำอาหารได้ง่ายผ่านแอป, ขั้นตอนแบบ step-by-step, รูปภาพ และคำอธิบาย โดยจุดเด่นของแอปนี้คือ "ใครก็สามารถลงคลิปสอนทำอาหารได้" ทำให้เกิดคอมมูนิตี้ของคนรักการทำอาหาร ทั้งมืออาชีพและมือสมัครเล่น</p>
   <script src="script.js"></script>
 </div>
 
